<resources>
    <string name="app_name">ChatApplication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="wait_for_the_code_i_sent_you">Wait for the code I sent you...</string>
    <string name="i_sent_you_a_code_it_will_be_detected_automatically_but_if_it_is_not_detected_you_can_put_it_below_manually_as_well">I sent you a code, it will be detected automatically but if it is not detected you can put it below manually as well</string>
    <string name="enter_code">enter code</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="hello">hello</string>
    <string name="user_name">User Name</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="phone_number">Phone number</string>
    <string name="send">Send</string>
    <string name="_9821052454">9821052454</string>
    <string name="todo">TODO</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="type_a_message">Type a message...</string>
</resources>
