<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".StartActivity"
android:orientation="vertical"
android:background="#fff"
android:padding="20dp">


    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="136dp"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/logo_name"
        android:layout_width="272dp"
        android:layout_height="30dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="296dp"
        android:text="@string/hello_there_welcome_back"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:transitionName="logo_text"
       />

    <EditText
        android:id="@+id/etPhone1"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="368dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:orientation="vertical"
         />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btLogIn"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/btn_bg"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="#fff"
       />





</RelativeLayout>
